fix visible overflow bug on webkit

--- a/src/main/resources/theme/annapastry/cards/index.scss
+++ b/src/main/resources/theme/annapastry/cards/index.scss
@@ -17,7 +17,7 @@
 
   &__title {
     @extend .mdc-typography--headline6;
-    @extend .mdc-theme--on-primary;
+    // @extend .mdc-theme--on-primary;
   }
 
   &__subtitle {
